# proc-macro-workshop

bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bit_field.rs  bit_field_specifier.rs  gen_bit_type.rs  handler.rs  lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 03-accessors.rs  09-variant-out-of-range.stderr  11-bits-attribute-wrong.stderr  progress.rs
builder/: .rustc_info.json  Cargo.toml
builder/src/: handler.rs  lib.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: handler.rs  lib.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: handler.rs  lib.rs
seq/tests/: progress.rs
sorted/: Cargo.toml
sorted/src/: handler.rs  lib.rs
sorted/tests/: 04-variants-with-data.rs  progress.rs
