[package]
name = "bitfield"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
proc-macro2 = "1.0.66"
syn = {version = "2.0.27", features = ["default", "extra-traits", "full"]}
quote = "1.0.32"
paste = "1.0.14"