[package]
name = "seq"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# TODO
syn = {version = "2.0.27", features = ["default", "extra-traits", "full"]}
proc-macro2 = "1.0.66"